# Growtopia-Bot

./: BUILD_GUIDE.md  CMakeLists.txt  MODERNIZATION.md  README-MODERN.md  build-termux.sh
Growtopia_Bot/: corefunc_modern.h  enet_login_test.cpp  userfunc.h
